# NebulaOS_Comet

./: .gitignore  LICENSE  README.md  __init__.py  bob  cbinds.py  config.py  cursor.py  debugger.py  desktop_main.py  err.txt  example.nbgf  fileexplorer.py  index.html  kernel.py  lang.py  list_of_cmd.txt  load.py  logger.py  mach-o.py  menu.py  movexample.nsm  nbgf.py  nsm.html  program.nsm  pyproject.toml  renderer.py  requirements.txt  runexample.py  savesys.py  style.py  styles.css  terminal.py  trash.py  typeentries.py  upload  util.py  webapi.py  welcome.py
assets/img/file/: fileicons.json
assets/img/wallpapers/: wallpapers.json
capi/: bob  dict.c  dict.h  test.c
nebfiles/: type_hints.py  typeentries.json
nebfiles/system/programs/: calculator.nsm  edittext.nsm  honestfish.nsm  paint.nsm  player.nsm  template.nsm  viewer.nsm
nebfiles/system/programs/assets/: goldfish.glb
src/: runexample.py
