[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nebulaos"
version = "0.2.0a2"
description = "another dist method of NebulaOS"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Annes", email = "anneswidow@gmail.com" }
]
keywords = ["nebulaos", "os", "3D"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Topic :: Games/Entertainment :: Simulation",
]

[tool.setuptools]
packages = ["nebdist"]
include-package-data = true

[tool.setuptools.package-data]
nebulaos = ["*"]

[project.urls]
"Homepage" = "https://annes12345678910.github.io/NebulaOS_Comet/"
"Bug Tracker" = "https://github.com/annes12345678910/NebulaOS_Comet/issues"
